WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301749
[MSE/EME] Video freezes on first frame when transitioning from encrypted to clear (content to ad)
https://bugs.webkit.org/show_bug.cgi?id=301749
Summary
[MSE/EME] Video freezes on first frame when transitioning from encrypted to c...
Jean-Yves Avenard [:jya]
Reported
2025-10-31 03:09:31 PDT
When playing an encrypted stream that transition to a clear section; the video will freeze while audio continue playing
rdar://163748550
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-10-31 03:25:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53252
Jean-Yves Avenard [:jya]
Comment 2
2025-10-31 03:27:53 PDT
rdar://162234566
EWS
Comment 3
2025-10-31 16:04:04 PDT
Committed
302409@main
(ffb9c4a28c1a): <
https://commits.webkit.org/302409@main
> Reviewed commits have been landed. Closing PR #53252 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug