LayoutTests/http/tests/media/fairplay/eme2016.js
@@ -1,11 +1,13 @@
-async function fetchBuffer(url) {
+async function fetchBuffer(url, options) {
     try {
         let result = await fetch(url);
         let buffer = await result.arrayBuffer();
-        consoleWrite(`FETCH: ${url} OK`);
+        if (!options || !options.silent)
+            consoleWrite(`FETCH: ${url} OK`);
         return buffer;
     } catch(e) {
-        consoleWrite(`FETCH: ${url} ERROR`);
+        if (!options || !options.silent)
+            consoleWrite(`FETCH: ${url} ERROR`);
         failTest();
     }
 }
@@ -43,26 +45,30 @@ async function startEME(options) {
     let capabilities = options.capabilities;
 
     let access = await navigator.requestMediaKeySystemAccess("com.apple.fps", capabilities);
-    consoleWrite('PROMISE: requestMediaKeySystemAccess resolved');
+    if (!options.silent)
+        consoleWrite('PROMISE: requestMediaKeySystemAccess resolved');
 
     let keys = await access.createMediaKeys();
-    consoleWrite('PROMISE: createMediaKeys resolved');
-    let certificate = await fetchBuffer('resources/cert.der');
+    if (!options.silent)
+        consoleWrite('PROMISE: createMediaKeys resolved');
+    let certificate = await fetchBuffer('resources/cert.der', options);
     await keys.setServerCertificate(certificate);
-    consoleWrite('PROMISE: keys.setServerCertificate resolved');
+    if (!options.silent)
+        consoleWrite('PROMISE: keys.setServerCertificate resolved');
 
     if (options.setMediaKeys) {
         await video.setMediaKeys(keys);
-        consoleWrite('PROMISE: setMediaKeys() resolved');
+        if (!options.silent)
+            consoleWrite('PROMISE: setMediaKeys() resolved');
     }
 
     return keys;
 }
 
-async function fetchAndAppend(sourceBuffer, url, silent) {
-    let buffer = await fetchBuffer(url);
+async function fetchAndAppend(sourceBuffer, url, options) {
+    let buffer = await fetchBuffer(url, options);
     sourceBuffer.appendBuffer(buffer);
-    await waitFor(sourceBuffer, 'updateend', silent);
+    await waitFor(sourceBuffer, 'updateend', options && options.silent);
 }
 
 async function runAndWaitForLicenseRequest(session, callback) {
@@ -70,7 +76,7 @@ async function runAndWaitForLicenseRequest(session, callback) {
     await callback();
     let message = await licenseRequestPromise;
 
-    let response = await getResponse(message);
+    let response = await getResponse(message, options);
     await session.update(response);
     consoleWrite('PROMISE: session.update() resolved');
 }
@@ -81,33 +87,37 @@ async function fetchAndWaitForLicenseRequest(session, sourceBuffer, url) {
     });
 }
 
-async function fetchAppendAndWaitForEncrypted(video, mediaKeys, sourceBuffer, url) {
-    let updateEndPromise = fetchAndAppend(sourceBuffer, url, true);
-    let encryptedEvent = await waitFor(video, 'encrypted');
+async function fetchAppendAndWaitForEncrypted(video, mediaKeys, sourceBuffer, url, options) {
+    let updateEndPromise = fetchAndAppend(sourceBuffer, url, options);
+    let encryptedEvent = await waitFor(video, 'encrypted', options && options.silent);
 
     let session = mediaKeys.createSession();
     session.generateRequest(encryptedEvent.initDataType, encryptedEvent.initData);
-    let message = await waitFor(session, 'message');
-    let response = await getResponse(message);
+    let message = await waitFor(session, 'message', options && options.silent);
+    let response = await getResponse(message, options);
     await session.update(response);
-    consoleWrite('PROMISE: session.update() resolved');
+    if (!options || !options.silent)
+        consoleWrite('PROMISE: session.update() resolved');
     await updateEndPromise;
-    consoleWrite(`EVENT(updateend)`);
+    if (!options || !options.silent)
+        consoleWrite(`EVENT(updateend)`);
     return session;
 }
 
-async function createBufferAndAppend(mediaSource, type, url) {
+async function createBufferAndAppend(mediaSource, type, url, options) {
     let sourceBuffer = mediaSource.addSourceBuffer(type);
-    consoleWrite('Created sourceBuffer');
-    await fetchAndAppend(sourceBuffer, url);
+    if (!options || !options.silent)
+        consoleWrite('Created sourceBuffer');
+    await fetchAndAppend(sourceBuffer, url, options);
     return sourceBuffer;
 }
 
-async function createBufferAppendAndWaitForEncrypted(video, mediaSource, mediaKeys, type, url) {
+async function createBufferAppendAndWaitForEncrypted(video, mediaSource, mediaKeys, type, url, options) {
     let sourceBuffer = mediaSource.addSourceBuffer(type);
-    consoleWrite('Created sourceBuffer');
+    if (!options || !options.silent)
+        consoleWrite('Created sourceBuffer');
 
-    let session = await fetchAppendAndWaitForEncrypted(video, mediaKeys, sourceBuffer, url);
+    let session = await fetchAppendAndWaitForEncrypted(video, mediaKeys, sourceBuffer, url, options);
 
     return {sourceBuffer, session};
 }
